<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/specificneighbour_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:background="@color/design_default_color_primary"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nameavatar_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
        app:layout_constraintLeft_toLeftOf="@id/avatar_img" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/cardview_light_background"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_empty_star_24dp"
        app:layout_constraintBottom_toBottomOf="@id/avatar_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_img" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_img"
            tools:ignore="MissingConstraints">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/avatar_img">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name1_txt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="15"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/address_txt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="15"
                        android:drawableStart="@drawable/ic_location_24dp"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/phone_txt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="15"
                        android:drawableStart="@drawable/ic_phone_24dp"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/social_txt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="15"
                        android:drawableStart="@drawable/ic_globe_24dp"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:textSize="15sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/cardview1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/aboutme_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="10dp"
                        android:text="@string/about_me_title"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aboutme_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="10dp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>